Add circleci and k8s deployment pipeline
